# ProjetoEtic

./: Dockerfile  README  pyproject.toml
Projeto/: manage.py
Projeto/DrivIT/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Projeto/DrivIT/template/: base.html
Projeto/app_login/: views.py
Projeto/app_staff/: apps.py
